--- a/.github/workflows/c-build.yml
+++ b/.github/workflows/c-build.yml
@@ -14,4 +14,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       
-    - run:  make all -C Prime_number/
+    - name: make all
+      run:  make all -C Prime_number/
