--- a/Prime_number/Makefile
+++ b/Prime_number/Makefile
@@ -1,54 +1,24 @@
-	
-# Name of the project
-PROJECT_NAME = PRIMENUMBER
+SRC = unity/unity.c\
+src/prime_number.c\
+test/test_prime_number.c
+
+INC = -Iunity\
+-Iinc\
+-Itest
+
+PROJECT_NAME = PRIMENUMBER.exe
 
 # Output directory
 BUILD = build
 
-# All source code files
-SRC =src/prime_number.c\
-
-# All test source files
-TEST_SRC = src/prime_number.c\
-test/test_prime_number.c
-
-TEST_OUTPUT = $(BUILD)/Test_$(PROJECT_NAME).out
-
-# All include folders with header files
-INC	= -Iinc
-
-PROJECT_OUTPUT = $(BUILD)/$(PROJECT_NAME).out
-
-# Document files
-DOCUMENTATION_OUTPUT = documentation/html
-
-# Default target built
-$(PROJECT_NAME):all
-
-# Run the target even if the matching name exists
-.PHONY: run clean test  doc all
+$(PROJECT_NAME): $(SRC)
+	gcc $(SRC) $(INC) -o $(PROJECT_NAME)
 
 all: $(SRC) $(BUILD)
-	gcc $(SRC) $(INC) -o $(PROJECT_OUTPUT).out
+	gcc $(SRC) $(INC) -o $(PROJECT_NAME)
 
-# Call `make run` to run the application
 run:$(PROJECT_NAME)
-	./$(PROJECT_OUTPUT)
+	./${PROJECT_NAME}
 
-# Document the code using Doxygen
-doc:
-	make -C ./documentation
-
-# Build and run the unit tests
-test:$(BUILD)
-	gcc $(TEST_SRC) $(INC) -o $(TEST_OUTPUT) -lcunit
-	./$(TEST_OUTPUT)
-
-# Remove all the built files, invoke by `make clean`
 clean:
-	rm -rf $(BUILD) $(DOCUMENTATION_OUTPUT)
-
-# Create new build folder if not present
-$(BUILD):
-	mkdir build
-	
+	rm -rf $(PROJECT_NAME)
